# apps/api/src/moves/moves.module.ts
@@ -1,0 +1,10 @@
+import { Module } from '@nestjs/common';
+
+import { MovesController } from '@/moves/moves.controller';
+import { MovesService } from '@/moves/moves.service';
+
+@Module({
+  controllers: [MovesController],
+  providers: [MovesService],
+})
+export class MovesModule {}
